# -YUV_RGB-

./: .gitignore  CMakeLists.txt  FFmpeg_project.sln  FFmpeg_project.vcxproj  FFmpeg_project.vcxproj.filters  README.md  TestRGB.cpp  TestRGB.h  TestRGB.ui  XVideoView.cpp
include/: XSDL.h  XVideoView.h
src/: XSDL.cpp  main.cpp
xvideo_view/Debug/: vc143.idb  xvideo_view.exe.recipe  xvideo_view.ilk
xvideo_view/Debug/moc/: moc_TestRGB.cpp
xvideo_view/Debug/rcc/: qrc_TestRGB.cpp
xvideo_view/Debug/uic/: ui_TestRGB.h
xvideo_view/Debug/xvideo_view.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog  xvideo_view.lastbuildstate  xvideo_view.write.1u.tlog
